# moteusapi_ert

./: CMakeLists.txt  README.md
examples_MoteusAPI_ERT/: CMakeLists.txt  main_positionSet_test.cpp  main_readstate_test.cpp  main_stopcmd_test.cpp  main_torqueSet_test.cpp
moteusapi/: MoteusAPI_ERT.cpp  MoteusAPI_ERT.h  README.md  README.txt
